add jib-maven-plugin